# src/controllers/types/user-info-response.type.ts
@@ -1,0 +1,16 @@
+import { UserInfoTypes } from "@/src/types/user-info.type";
+
+export interface UserInfoResponse {
+  message: string;
+  data: UserInfoTypes;
+}
+
+export interface UserInfoPaginatedResponse{
+  message : string;
+  data:{
+    [key:string] : UserInfoTypes[] | number;
+    totalItems:number;
+    totalPages:number;
+    currentPages:number
+  }
+}
